# django-sample

./: .env.example  .example.env  pyproject.toml
config/: settings.py  urls.py
posts/: admin.py  models.py  permissions.py  serializers.py  views.py
posts/migrations/: 0001_initial.py
users/: permissions.py  serializers.py  tests.py  views.py
users/migrations/: 0001_initial.py
